--- a/00-Python Object and Data Structure Basics/01-Python Comparison Operators/01-Comparison Operators.ipynb
+++ b/00-Python Object and Data Structure Basics/01-Python Comparison Operators/01-Comparison Operators.ipynb
@@ -365,7 +365,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -379,9 +379,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
