--- a/00-Python Object and Data Structure Basics/02-Python Statements/02-if, elif, and else Statements.ipynb
+++ b/00-Python Object and Data Structure Basics/02-Python Statements/02-if, elif, and else Statements.ipynb
@@ -197,7 +197,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -211,9 +211,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
